tests/agl/rejections/parse/bare_case_after_until.agl
enum S
  | A
  | B
let s: S = A
var n: int = 0
do[2] n := n + 1 until case s of | A => true | B => false
